Fixed sellerListing update issues with editlisting. Added real-time updates to fetch listing status in Browse.tsx and SellerListings.tsx and EditListing.tsx. Fixed mode switch in UserOrder.tsx. Minor issues fixed.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,29 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-project</title>
+    <meta
+      name="description"
+      content="Campus Night Market - Buy and sell homemade food on campus."
+    />
+    <meta name="theme-color" content="#CC0000" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Campus Night Market" />
+    <meta
+      property="og:description"
+      content="Buy and sell homemade food on campus. Connect with student sellers and discover delicious meals."
+    />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Campus Night Market" />
+    <meta
+      name="twitter:description"
+      content="Buy and sell homemade food on campus. Connect with student sellers and discover delicious meals."
+    />
+
+    <title>Campus Night Market - Student Food Marketplace</title>
   </head>
   <body>
     <div id="root"></div>
