Add comprehensive tests for navigation store, error messages, rate limiter, and validation utilities.

--- a/index.html
+++ b/index.html
@@ -2,31 +2,63 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
+    <title>Campus Night Market - Student Food Marketplace | IIT</title>
+    <meta name="title" content="Campus Night Market - Student Food Marketplace | IIT" />
     <meta
       name="description"
-      content="Campus Night Market - Buy and sell homemade food on campus."
+      content="The official student food marketplace for Illinois Institute of Technology. Buy and sell homemade food on campus. Discover delicious late-night meals from fellow students."
     />
+    <meta
+      name="keywords"
+      content="campus food, student marketplace, IIT, homemade food, late night food, college food, food delivery, student sellers"
+    />
+    <meta name="author" content="Campus Night Market" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Theme & App -->
     <meta name="theme-color" content="#CC0000" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="NightMarket" />
+    <meta name="application-name" content="Campus Night Market" />
+    <meta name="msapplication-TileColor" content="#CC0000" />
+
+    <!-- Favicons -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/icon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/icon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
+    <link rel="manifest" href="/manifest.webmanifest" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Campus Night Market" />
+    <meta property="og:url" content="https://campus-nightmarket.web.app/" />
+    <meta property="og:title" content="Campus Night Market - Student Food Marketplace" />
     <meta
       property="og:description"
-      content="Buy and sell homemade food on campus. Connect with student sellers and discover delicious meals."
+      content="The official student food marketplace for IIT. Buy and sell homemade food on campus. Discover delicious late-night meals from fellow students."
     />
+    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:site_name" content="Campus Night Market" />
+    <meta property="og:locale" content="en_US" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Campus Night Market" />
+    <meta name="twitter:url" content="https://campus-nightmarket.web.app/" />
+    <meta name="twitter:title" content="Campus Night Market - Student Food Marketplace" />
     <meta
       name="twitter:description"
-      content="Buy and sell homemade food on campus. Connect with student sellers and discover delicious meals."
+      content="The official student food marketplace for IIT. Buy and sell homemade food on campus. Discover delicious late-night meals."
     />
+    <meta name="twitter:image" content="/og-image.png" />
 
-    <title>Campus Night Market - Student Food Marketplace</title>
+    <!-- Preconnect to external resources -->
+    <link rel="preconnect" href="https://firestore.googleapis.com" />
+    <link rel="preconnect" href="https://firebase.googleapis.com" />
+    <link rel="dns-prefetch" href="https://firestore.googleapis.com" />
   </head>
   <body>
     <div id="root"></div>
